# tft-vaca-muerta-oil-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.git-backup/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
.git-backup/filter-repo/: commit-map  first-changed-commits  ref-map
.git-backup/info/: refs
.git-backup/logs/: HEAD
.git-backup/objects/info/: commit-graph  packs
.git-backup/objects/pack/: pack-b04a3b9104e254a455d1bdee277aa18ed8f43ccd.idx  pack-b04a3b9104e254a455d1bdee277aa18ed8f43ccd.rev
app/: app.py  vm_app.py  vm_app_.py
data/artifacts/metrics/: baselines_overall.json  baselines_per_series.csv  cv_metrics_per_series_window.csv  cv_metrics_per_series_window_baseline_global_scaler.csv  cv_metrics_per_series_window_log_baseline.csv  cv_overall.json  metrics_overall.json  metrics_per_series_window_baseline_again.csv  search_best.json  search_best_bo_baseline_global_scaler.json  search_best_bo_baseline_scaler.json  search_best_log_optimized.json  search_best_overall_baseline_global_scaler.json  search_best_overall_bo.json  search_trials.csv  search_trials_bo_baseline_global_scaler.csv  search_trials_bo_baseline_scaler.csv  search_trials_log_optimized.csv  trials_log_baseline.csv
data/processed/: vm_tft_test.csv  vm_tft_test_new.csv
notebooks/: vaca_muerta - TFT - multiple series.ipynb  vaca_muerta_tft.ipynb
src/vm_tft/: cfg.py  datasets.py  evaluate.py  features.py  io_utils.py  modeling.py  physics_dca.py  warm_start.py
streamlit/: config.toml
tools/: make_data_card_chart.py
(+70 files in other folders)
