[tool.poetry]
name = "tft-vaca-muerta"
version = "0.1.0"
description = "TFT forecasting for Vaca Muerta"
authors = ["Alexis Ortega <alexort74@gmail.com>"]
readme = "README.md"
packages = [{ include = "vm_tft", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pandas = "^2.3.1"
matplotlib = "^3.10.0"
statsmodels = "^0.14.5"
scikit-learn = "^1.7.1"
darts = "^0.36.0"
pytorch-lightning = "^2.5.2"
jupyter = "^1.1.1"
ipywidgets = "^8.1.7"
pytorch-forecasting = "^1.4.0"
# Torch pinned from CUDA source below:
torch = { version = "2.8.0", source = "pytorch-gpu-src" }
torchvision = { version = "^0.23.0", source = "pytorch-gpu-src" }
streamlit = "^1.49.1"
plotly = "^6.3.0"
pmdarima = "^2.0.4"
optuna = "^4.5.0"
scikit-optimize = "^0.10.2"
tqdm = "^4.67.1"

[tool.poetry.scripts]
vm-prepare = "vm_tft.cli.prepare_data:main"
vm-fit-cv  = "vm_tft.cli.fit_cv:main"
vm-baselines  = "vm_tft.cli.baselines:main"
vm-search  = "vm_tft.cli.search_fit:main"
vm-search-bo  = "vm_tft.cli.search_fit_bo:main"
vm-test    = "vm_tft.cli.test_predict:main"
vm-explain = "vm_tft.cli.explain:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"
